src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program_file
Rule 1     assignment -> reference = expression
Rule 2     type_spec -> INTEGER_TYPE
Rule 3     type_spec -> REAL_TYPE
Rule 4     type_spec -> LOGICAL_TYPE
Rule 5     type_spec -> CHARACTER_TYPE
Rule 6     function_unit -> function_prefix FUNCTION ID parameter_name_list_opt terminator statement_items END
Rule 7     if_statement -> IF ( expression ) THEN terminator statement_items else_part ENDIF terminator
Rule 8     print_statement -> PRINT * , print_items_opt
Rule 9     program_file -> opt_newlines main_program subprogram_items
Rule 10    do_statement -> DO label_number ID = expression , expression do_step_opt terminator statement_items do_end
Rule 11    else_part -> ELSE terminator statement_items
Rule 12    else_part -> empty
Rule 13    print_items_opt -> expression_list
Rule 14    print_items_opt -> empty
Rule 15    declaration -> type_spec variable_spec_list
Rule 16    opt_newlines -> opt_newlines NEWLINE
Rule 17    opt_newlines -> empty
Rule 18    expression -> expression OR expression
Rule 19    expression -> expression AND expression
Rule 20    expression -> expression EQ expression
Rule 21    expression -> expression NE expression
Rule 22    expression -> expression LT expression
Rule 23    expression -> expression LE expression
Rule 24    expression -> expression GT expression
Rule 25    expression -> expression GE expression
Rule 26    expression -> expression + expression
Rule 27    expression -> expression - expression
Rule 28    expression -> expression * expression
Rule 29    expression -> expression / expression
Rule 30    expression -> expression POWER expression
Rule 31    function_prefix -> type_spec
Rule 32    function_prefix -> empty
Rule 33    read_statement -> READ * , reference_list
Rule 34    variable_spec_list -> variable_spec
Rule 35    subprogram_items -> subprogram_items subprogram_item
Rule 36    subroutine_unit -> SUBROUTINE ID parameter_name_list_opt terminator statement_items END
Rule 37    reference_list -> reference
Rule 38    variable_spec_list -> variable_spec_list , variable_spec
Rule 39    do_step_opt -> , expression
Rule 40    do_step_opt -> empty
Rule 41    subprogram_items -> empty
Rule 42    reference_list -> reference_list , reference
Rule 43    variable_spec -> ID
Rule 44    parameter_name_list_opt -> ( parameter_name_list )
Rule 45    parameter_name_list_opt -> empty
Rule 46    subprogram_item -> NEWLINE
Rule 47    do_end -> LABEL CONTINUE terminator
Rule 48    goto_statement -> GOTO label_number
Rule 49    expression -> NOT expression
Rule 50    empty -> <empty>
Rule 51    variable_spec -> ID ( expression_list )
Rule 52    subprogram_item -> function_unit
Rule 53    subprogram_item -> subroutine_unit
Rule 54    parameter_name_list -> ID
Rule 55    expression -> - expression
Rule 56    expression -> + expression
Rule 57    parameter_name_list -> parameter_name_list , ID
Rule 58    main_program -> PROGRAM ID terminator statement_items END
Rule 59    expression -> ( expression )
Rule 60    call_statement -> CALL ID call_arguments_opt
Rule 61    statement_items -> statement_items statement_item
Rule 62    expression -> INTEGER
Rule 63    call_arguments_opt -> ( expression_list_opt )
Rule 64    call_arguments_opt -> empty
Rule 65    statement_items -> empty
Rule 66    expression -> REAL
Rule 67    statement_item -> NEWLINE
Rule 68    expression -> STRING
Rule 69    statement_item -> statement
Rule 70    expression -> TRUE
Rule 71    expression -> FALSE
Rule 72    statement -> opt_label declaration terminator
Rule 73    statement -> opt_label assignment terminator
Rule 74    statement -> opt_label print_statement terminator
Rule 75    statement -> opt_label read_statement terminator
Rule 76    statement -> opt_label goto_statement terminator
Rule 77    statement -> opt_label call_statement terminator
Rule 78    statement -> opt_label RETURN terminator
Rule 79    statement -> opt_label STOP terminator
Rule 80    expression -> reference
Rule 81    reference -> ID
Rule 82    reference -> ID ( expression_list_opt )
Rule 83    statement -> CONTINUE terminator
Rule 84    expression_list -> expression
Rule 85    statement -> opt_label if_statement
Rule 86    expression_list -> expression_list , expression
Rule 87    statement -> opt_label do_statement
Rule 88    expression_list_opt -> expression_list
Rule 89    expression_list_opt -> empty
Rule 90    opt_label -> LABEL
Rule 91    opt_label -> empty
Rule 92    label_number -> INTEGER
Rule 93    label_number -> LABEL
Rule 94    terminator -> NEWLINE

Terminals, with rules where they appear

(                    : 7 44 51 59 63 82
)                    : 7 44 51 59 63 82
*                    : 8 28 33
+                    : 26 56
,                    : 8 10 33 38 39 42 57 86
-                    : 27 55
/                    : 29
=                    : 1 10
AND                  : 19
CALL                 : 60
CHARACTER_TYPE       : 5
CONTINUE             : 47 83
DO                   : 10
ELSE                 : 11
END                  : 6 36 58
ENDIF                : 7
EQ                   : 20
FALSE                : 71
FUNCTION             : 6
GE                   : 25
GOTO                 : 48
GT                   : 24
ID                   : 6 10 36 43 51 54 57 58 60 81 82
IF                   : 7
INTEGER              : 62 92
INTEGER_TYPE         : 2
LABEL                : 47 90 93
LE                   : 23
LOGICAL_TYPE         : 4
LT                   : 22
NE                   : 21
NEWLINE              : 16 46 67 94
NOT                  : 49
OR                   : 18
POWER                : 30
PRINT                : 8
PROGRAM              : 58
READ                 : 33
REAL                 : 66
REAL_TYPE            : 3
RETURN               : 78
STOP                 : 79
STRING               : 68
SUBROUTINE           : 36
THEN                 : 7
TRUE                 : 70
error                : 

Nonterminals, with rules where they appear

assignment           : 73
call_arguments_opt   : 60
call_statement       : 77
declaration          : 72
do_end               : 10
do_statement         : 87
do_step_opt          : 10
else_part            : 7
empty                : 12 14 17 32 40 41 45 64 65 89 91
expression           : 1 7 10 10 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 39 49 55 56 59 84 86
expression_list      : 13 51 86 88
expression_list_opt  : 63 82
function_prefix      : 6
function_unit        : 52
goto_statement       : 76
if_statement         : 85
label_number         : 10 48
main_program         : 9
opt_label            : 72 73 74 75 76 77 78 79 85 87
opt_newlines         : 9 16
parameter_name_list  : 44 57
parameter_name_list_opt : 6 36
print_items_opt      : 8
print_statement      : 74
program_file         : 0
read_statement       : 75
reference            : 1 37 42 80
reference_list       : 33 42
statement            : 69
statement_item       : 61
statement_items      : 6 7 10 11 36 58 61
subprogram_item      : 35
subprogram_items     : 9 35
subroutine_unit      : 53
terminator           : 6 7 7 10 11 36 47 58 72 73 74 75 76 77 78 79 83
type_spec            : 15 31
variable_spec        : 34 38
variable_spec_list   : 15 38

Parsing method: LALR

state 0

    (0) S' -> . program_file
    (9) program_file -> . opt_newlines main_program subprogram_items
    (16) opt_newlines -> . opt_newlines NEWLINE
    (17) opt_newlines -> . empty
    (50) empty -> .

    NEWLINE         reduce using rule 50 (empty -> .)
    PROGRAM         reduce using rule 50 (empty -> .)

    program_file                   shift and go to state 1
    opt_newlines                   shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program_file .



state 2

    (9) program_file -> opt_newlines . main_program subprogram_items
    (16) opt_newlines -> opt_newlines . NEWLINE
    (58) main_program -> . PROGRAM ID terminator statement_items END

    NEWLINE         shift and go to state 5
    PROGRAM         shift and go to state 6

    main_program                   shift and go to state 4

state 3

    (17) opt_newlines -> empty .

    NEWLINE         reduce using rule 17 (opt_newlines -> empty .)
    PROGRAM         reduce using rule 17 (opt_newlines -> empty .)


state 4

    (9) program_file -> opt_newlines main_program . subprogram_items
    (35) subprogram_items -> . subprogram_items subprogram_item
    (41) subprogram_items -> . empty
    (50) empty -> .

    NEWLINE         reduce using rule 50 (empty -> .)
    SUBROUTINE      reduce using rule 50 (empty -> .)
    INTEGER_TYPE    reduce using rule 50 (empty -> .)
    REAL_TYPE       reduce using rule 50 (empty -> .)
    LOGICAL_TYPE    reduce using rule 50 (empty -> .)
    CHARACTER_TYPE  reduce using rule 50 (empty -> .)
    FUNCTION        reduce using rule 50 (empty -> .)
    $end            reduce using rule 50 (empty -> .)

    subprogram_items               shift and go to state 7
    empty                          shift and go to state 8

state 5

    (16) opt_newlines -> opt_newlines NEWLINE .

    NEWLINE         reduce using rule 16 (opt_newlines -> opt_newlines NEWLINE .)
    PROGRAM         reduce using rule 16 (opt_newlines -> opt_newlines NEWLINE .)


state 6

    (58) main_program -> PROGRAM . ID terminator statement_items END

    ID              shift and go to state 9


state 7

    (9) program_file -> opt_newlines main_program subprogram_items .
    (35) subprogram_items -> subprogram_items . subprogram_item
    (46) subprogram_item -> . NEWLINE
    (52) subprogram_item -> . function_unit
    (53) subprogram_item -> . subroutine_unit
    (6) function_unit -> . function_prefix FUNCTION ID parameter_name_list_opt terminator statement_items END
    (36) subroutine_unit -> . SUBROUTINE ID parameter_name_list_opt terminator statement_items END
    (31) function_prefix -> . type_spec
    (32) function_prefix -> . empty
    (2) type_spec -> . INTEGER_TYPE
    (3) type_spec -> . REAL_TYPE
    (4) type_spec -> . LOGICAL_TYPE
    (5) type_spec -> . CHARACTER_TYPE
    (50) empty -> .

    $end            reduce using rule 9 (program_file -> opt_newlines main_program subprogram_items .)
    NEWLINE         shift and go to state 11
    SUBROUTINE      shift and go to state 15
    INTEGER_TYPE    shift and go to state 18
    REAL_TYPE       shift and go to state 19
    LOGICAL_TYPE    shift and go to state 20
    CHARACTER_TYPE  shift and go to state 21
    FUNCTION        reduce using rule 50 (empty -> .)

    subprogram_item                shift and go to state 10
    function_unit                  shift and go to state 12
    subroutine_unit                shift and go to state 13
    function_prefix                shift and go to state 14
    type_spec                      shift and go to state 16
    empty                          shift and go to state 17

state 8

    (41) subprogram_items -> empty .

    NEWLINE         reduce using rule 41 (subprogram_items -> empty .)
    SUBROUTINE      reduce using rule 41 (subprogram_items -> empty .)
    INTEGER_TYPE    reduce using rule 41 (subprogram_items -> empty .)
    REAL_TYPE       reduce using rule 41 (subprogram_items -> empty .)
    LOGICAL_TYPE    reduce using rule 41 (subprogram_items -> empty .)
    CHARACTER_TYPE  reduce using rule 41 (subprogram_items -> empty .)
    FUNCTION        reduce using rule 41 (subprogram_items -> empty .)
    $end            reduce using rule 41 (subprogram_items -> empty .)


state 9

    (58) main_program -> PROGRAM ID . terminator statement_items END
    (94) terminator -> . NEWLINE

    NEWLINE         shift and go to state 23

    terminator                     shift and go to state 22

state 10

    (35) subprogram_items -> subprogram_items subprogram_item .

    NEWLINE         reduce using rule 35 (subprogram_items -> subprogram_items subprogram_item .)
    SUBROUTINE      reduce using rule 35 (subprogram_items -> subprogram_items subprogram_item .)
    INTEGER_TYPE    reduce using rule 35 (subprogram_items -> subprogram_items subprogram_item .)
    REAL_TYPE       reduce using rule 35 (subprogram_items -> subprogram_items subprogram_item .)
    LOGICAL_TYPE    reduce using rule 35 (subprogram_items -> subprogram_items subprogram_item .)
    CHARACTER_TYPE  reduce using rule 35 (subprogram_items -> subprogram_items subprogram_item .)
    FUNCTION        reduce using rule 35 (subprogram_items -> subprogram_items subprogram_item .)
    $end            reduce using rule 35 (subprogram_items -> subprogram_items subprogram_item .)


state 11

    (46) subprogram_item -> NEWLINE .

    NEWLINE         reduce using rule 46 (subprogram_item -> NEWLINE .)
    SUBROUTINE      reduce using rule 46 (subprogram_item -> NEWLINE .)
    INTEGER_TYPE    reduce using rule 46 (subprogram_item -> NEWLINE .)
    REAL_TYPE       reduce using rule 46 (subprogram_item -> NEWLINE .)
    LOGICAL_TYPE    reduce using rule 46 (subprogram_item -> NEWLINE .)
    CHARACTER_TYPE  reduce using rule 46 (subprogram_item -> NEWLINE .)
    FUNCTION        reduce using rule 46 (subprogram_item -> NEWLINE .)
    $end            reduce using rule 46 (subprogram_item -> NEWLINE .)


state 12

    (52) subprogram_item -> function_unit .

    NEWLINE         reduce using rule 52 (subprogram_item -> function_unit .)
    SUBROUTINE      reduce using rule 52 (subprogram_item -> function_unit .)
    INTEGER_TYPE    reduce using rule 52 (subprogram_item -> function_unit .)
    REAL_TYPE       reduce using rule 52 (subprogram_item -> function_unit .)
    LOGICAL_TYPE    reduce using rule 52 (subprogram_item -> function_unit .)
    CHARACTER_TYPE  reduce using rule 52 (subprogram_item -> function_unit .)
    FUNCTION        reduce using rule 52 (subprogram_item -> function_unit .)
    $end            reduce using rule 52 (subprogram_item -> function_unit .)


state 13

    (53) subprogram_item -> subroutine_unit .

    NEWLINE         reduce using rule 53 (subprogram_item -> subroutine_unit .)
    SUBROUTINE      reduce using rule 53 (subprogram_item -> subroutine_unit .)
    INTEGER_TYPE    reduce using rule 53 (subprogram_item -> subroutine_unit .)
    REAL_TYPE       reduce using rule 53 (subprogram_item -> subroutine_unit .)
    LOGICAL_TYPE    reduce using rule 53 (subprogram_item -> subroutine_unit .)
    CHARACTER_TYPE  reduce using rule 53 (subprogram_item -> subroutine_unit .)
    FUNCTION        reduce using rule 53 (subprogram_item -> subroutine_unit .)
    $end            reduce using rule 53 (subprogram_item -> subroutine_unit .)


state 14

    (6) function_unit -> function_prefix . FUNCTION ID parameter_name_list_opt terminator statement_items END

    FUNCTION        shift and go to state 24


state 15

    (36) subroutine_unit -> SUBROUTINE . ID parameter_name_list_opt terminator statement_items END

    ID              shift and go to state 25


state 16

    (31) function_prefix -> type_spec .

    FUNCTION        reduce using rule 31 (function_prefix -> type_spec .)


state 17

    (32) function_prefix -> empty .

    FUNCTION        reduce using rule 32 (function_prefix -> empty .)


state 18

    (2) type_spec -> INTEGER_TYPE .

    FUNCTION        reduce using rule 2 (type_spec -> INTEGER_TYPE .)
    ID              reduce using rule 2 (type_spec -> INTEGER_TYPE .)


state 19

    (3) type_spec -> REAL_TYPE .

    FUNCTION        reduce using rule 3 (type_spec -> REAL_TYPE .)
    ID              reduce using rule 3 (type_spec -> REAL_TYPE .)


state 20

    (4) type_spec -> LOGICAL_TYPE .

    FUNCTION        reduce using rule 4 (type_spec -> LOGICAL_TYPE .)
    ID              reduce using rule 4 (type_spec -> LOGICAL_TYPE .)


state 21

    (5) type_spec -> CHARACTER_TYPE .

    FUNCTION        reduce using rule 5 (type_spec -> CHARACTER_TYPE .)
    ID              reduce using rule 5 (type_spec -> CHARACTER_TYPE .)


state 22

    (58) main_program -> PROGRAM ID terminator . statement_items END
    (61) statement_items -> . statement_items statement_item
    (65) statement_items -> . empty
    (50) empty -> .

    END             reduce using rule 50 (empty -> .)
    NEWLINE         reduce using rule 50 (empty -> .)
    CONTINUE        reduce using rule 50 (empty -> .)
    LABEL           reduce using rule 50 (empty -> .)
    RETURN          reduce using rule 50 (empty -> .)
    STOP            reduce using rule 50 (empty -> .)
    PRINT           reduce using rule 50 (empty -> .)
    READ            reduce using rule 50 (empty -> .)
    GOTO            reduce using rule 50 (empty -> .)
    CALL            reduce using rule 50 (empty -> .)
    IF              reduce using rule 50 (empty -> .)
    DO              reduce using rule 50 (empty -> .)
    INTEGER_TYPE    reduce using rule 50 (empty -> .)
    REAL_TYPE       reduce using rule 50 (empty -> .)
    LOGICAL_TYPE    reduce using rule 50 (empty -> .)
    CHARACTER_TYPE  reduce using rule 50 (empty -> .)
    ID              reduce using rule 50 (empty -> .)

    statement_items                shift and go to state 26
    empty                          shift and go to state 27

state 23

    (94) terminator -> NEWLINE .

    END             reduce using rule 94 (terminator -> NEWLINE .)
    NEWLINE         reduce using rule 94 (terminator -> NEWLINE .)
    CONTINUE        reduce using rule 94 (terminator -> NEWLINE .)
    LABEL           reduce using rule 94 (terminator -> NEWLINE .)
    RETURN          reduce using rule 94 (terminator -> NEWLINE .)
    STOP            reduce using rule 94 (terminator -> NEWLINE .)
    PRINT           reduce using rule 94 (terminator -> NEWLINE .)
    READ            reduce using rule 94 (terminator -> NEWLINE .)
    GOTO            reduce using rule 94 (terminator -> NEWLINE .)
    CALL            reduce using rule 94 (terminator -> NEWLINE .)
    IF              reduce using rule 94 (terminator -> NEWLINE .)
    DO              reduce using rule 94 (terminator -> NEWLINE .)
    INTEGER_TYPE    reduce using rule 94 (terminator -> NEWLINE .)
    REAL_TYPE       reduce using rule 94 (terminator -> NEWLINE .)
    LOGICAL_TYPE    reduce using rule 94 (terminator -> NEWLINE .)
    CHARACTER_TYPE  reduce using rule 94 (terminator -> NEWLINE .)
    ID              reduce using rule 94 (terminator -> NEWLINE .)
    ELSE            reduce using rule 94 (terminator -> NEWLINE .)
    ENDIF           reduce using rule 94 (terminator -> NEWLINE .)


state 24

    (6) function_unit -> function_prefix FUNCTION . ID parameter_name_list_opt terminator statement_items END

    ID              shift and go to state 28


state 25

    (36) subroutine_unit -> SUBROUTINE ID . parameter_name_list_opt terminator statement_items END
    (44) parameter_name_list_opt -> . ( parameter_name_list )
    (45) parameter_name_list_opt -> . empty
    (50) empty -> .

    (               shift and go to state 30
    NEWLINE         reduce using rule 50 (empty -> .)

    parameter_name_list_opt        shift and go to state 29
    empty                          shift and go to state 31

state 26

    (58) main_program -> PROGRAM ID terminator statement_items . END
    (61) statement_items -> statement_items . statement_item
    (67) statement_item -> . NEWLINE
    (69) statement_item -> . statement
    (72) statement -> . opt_label declaration terminator
    (73) statement -> . opt_label assignment terminator
    (74) statement -> . opt_label print_statement terminator
    (75) statement -> . opt_label read_statement terminator
    (76) statement -> . opt_label goto_statement terminator
    (77) statement -> . opt_label call_statement terminator
    (78) statement -> . opt_label RETURN terminator
    (79) statement -> . opt_label STOP terminator
    (83) statement -> . CONTINUE terminator
    (85) statement -> . opt_label if_statement
    (87) statement -> . opt_label do_statement
    (90) opt_label -> . LABEL
    (91) opt_label -> . empty
    (50) empty -> .

    END             shift and go to state 32
    NEWLINE         shift and go to state 34
    CONTINUE        shift and go to state 37
    LABEL           shift and go to state 38
    RETURN          reduce using rule 50 (empty -> .)
    STOP            reduce using rule 50 (empty -> .)
    PRINT           reduce using rule 50 (empty -> .)
    READ            reduce using rule 50 (empty -> .)
    GOTO            reduce using rule 50 (empty -> .)
    CALL            reduce using rule 50 (empty -> .)
    IF              reduce using rule 50 (empty -> .)
    DO              reduce using rule 50 (empty -> .)
    INTEGER_TYPE    reduce using rule 50 (empty -> .)
    REAL_TYPE       reduce using rule 50 (empty -> .)
    LOGICAL_TYPE    reduce using rule 50 (empty -> .)
    CHARACTER_TYPE  reduce using rule 50 (empty -> .)
    ID              reduce using rule 50 (empty -> .)

    statement_item                 shift and go to state 33
    statement                      shift and go to state 35
    opt_label                      shift and go to state 36
    empty                          shift and go to state 39

state 27

    (65) statement_items -> empty .

    END             reduce using rule 65 (statement_items -> empty .)
    NEWLINE         reduce using rule 65 (statement_items -> empty .)
    CONTINUE        reduce using rule 65 (statement_items -> empty .)
    LABEL           reduce using rule 65 (statement_items -> empty .)
    RETURN          reduce using rule 65 (statement_items -> empty .)
    STOP            reduce using rule 65 (statement_items -> empty .)
    PRINT           reduce using rule 65 (statement_items -> empty .)
    READ            reduce using rule 65 (statement_items -> empty .)
    GOTO            reduce using rule 65 (statement_items -> empty .)
    CALL            reduce using rule 65 (statement_items -> empty .)
    IF              reduce using rule 65 (statement_items -> empty .)
    DO              reduce using rule 65 (statement_items -> empty .)
    INTEGER_TYPE    reduce using rule 65 (statement_items -> empty .)
    REAL_TYPE       reduce using rule 65 (statement_items -> empty .)
    LOGICAL_TYPE    reduce using rule 65 (statement_items -> empty .)
    CHARACTER_TYPE  reduce using rule 65 (statement_items -> empty .)
    ID              reduce using rule 65 (statement_items -> empty .)
    ELSE            reduce using rule 65 (statement_items -> empty .)
    ENDIF           reduce using rule 65 (statement_items -> empty .)


state 28

    (6) function_unit -> function_prefix FUNCTION ID . parameter_name_list_opt terminator statement_items END
    (44) parameter_name_list_opt -> . ( parameter_name_list )
    (45) parameter_name_list_opt -> . empty
    (50) empty -> .

    (               shift and go to state 30
    NEWLINE         reduce using rule 50 (empty -> .)

    parameter_name_list_opt        shift and go to state 40
    empty                          shift and go to state 31

state 29

    (36) subroutine_unit -> SUBROUTINE ID parameter_name_list_opt . terminator statement_items END
    (94) terminator -> . NEWLINE

    NEWLINE         shift and go to state 23

    terminator                     shift and go to state 41

state 30

    (44) parameter_name_list_opt -> ( . parameter_name_list )
    (54) parameter_name_list -> . ID
    (57) parameter_name_list -> . parameter_name_list , ID

    ID              shift and go to state 43

    parameter_name_list            shift and go to state 42

state 31

    (45) parameter_name_list_opt -> empty .

    NEWLINE         reduce using rule 45 (parameter_name_list_opt -> empty .)


state 32

    (58) main_program -> PROGRAM ID terminator statement_items END .

    NEWLINE         reduce using rule 58 (main_program -> PROGRAM ID terminator statement_items END .)
    SUBROUTINE      reduce using rule 58 (main_program -> PROGRAM ID terminator statement_items END .)
    INTEGER_TYPE    reduce using rule 58 (main_program -> PROGRAM ID terminator statement_items END .)
    REAL_TYPE       reduce using rule 58 (main_program -> PROGRAM ID terminator statement_items END .)
    LOGICAL_TYPE    reduce using rule 58 (main_program -> PROGRAM ID terminator statement_items END .)
    CHARACTER_TYPE  reduce using rule 58 (main_program -> PROGRAM ID terminator statement_items END .)
    FUNCTION        reduce using rule 58 (main_program -> PROGRAM ID terminator statement_items END .)
    $end            reduce using rule 58 (main_program -> PROGRAM ID terminator statement_items END .)


state 33

    (61) statement_items -> statement_items statement_item .

    END             reduce using rule 61 (statement_items -> statement_items statement_item .)
    NEWLINE         reduce using rule 61 (statement_items -> statement_items statement_item .)
    CONTINUE        reduce using rule 61 (statement_items -> statement_items statement_item .)
    LABEL           reduce using rule 61 (statement_items -> statement_items statement_item .)
    RETURN          reduce using rule 61 (statement_items -> statement_items statement_item .)
    STOP            reduce using rule 61 (statement_items -> statement_items statement_item .)
    PRINT           reduce using rule 61 (statement_items -> statement_items statement_item .)
    READ            reduce using rule 61 (statement_items -> statement_items statement_item .)
    GOTO            reduce using rule 61 (statement_items -> statement_items statement_item .)
    CALL            reduce using rule 61 (statement_items -> statement_items statement_item .)
    IF              reduce using rule 61 (statement_items -> statement_items statement_item .)
    DO              reduce using rule 61 (statement_items -> statement_items statement_item .)
    INTEGER_TYPE    reduce using rule 61 (statement_items -> statement_items statement_item .)
    REAL_TYPE       reduce using rule 61 (statement_items -> statement_items statement_item .)
    LOGICAL_TYPE    reduce using rule 61 (statement_items -> statement_items statement_item .)
    CHARACTER_TYPE  reduce using rule 61 (statement_items -> statement_items statement_item .)
    ID              reduce using rule 61 (statement_items -> statement_items statement_item .)
    ELSE            reduce using rule 61 (statement_items -> statement_items statement_item .)
    ENDIF           reduce using rule 61 (statement_items -> statement_items statement_item .)


state 34

    (67) statement_item -> NEWLINE .

    END             reduce using rule 67 (statement_item -> NEWLINE .)
    NEWLINE         reduce using rule 67 (statement_item -> NEWLINE .)
    CONTINUE        reduce using rule 67 (statement_item -> NEWLINE .)
    LABEL           reduce using rule 67 (statement_item -> NEWLINE .)
    RETURN          reduce using rule 67 (statement_item -> NEWLINE .)
    STOP            reduce using rule 67 (statement_item -> NEWLINE .)
    PRINT           reduce using rule 67 (statement_item -> NEWLINE .)
    READ            reduce using rule 67 (statement_item -> NEWLINE .)
    GOTO            reduce using rule 67 (statement_item -> NEWLINE .)
    CALL            reduce using rule 67 (statement_item -> NEWLINE .)
    IF              reduce using rule 67 (statement_item -> NEWLINE .)
    DO              reduce using rule 67 (statement_item -> NEWLINE .)
    INTEGER_TYPE    reduce using rule 67 (statement_item -> NEWLINE .)
    REAL_TYPE       reduce using rule 67 (statement_item -> NEWLINE .)
    LOGICAL_TYPE    reduce using rule 67 (statement_item -> NEWLINE .)
    CHARACTER_TYPE  reduce using rule 67 (statement_item -> NEWLINE .)
    ID              reduce using rule 67 (statement_item -> NEWLINE .)
    ELSE            reduce using rule 67 (statement_item -> NEWLINE .)
    ENDIF           reduce using rule 67 (statement_item -> NEWLINE .)


state 35

    (69) statement_item -> statement .

    END             reduce using rule 69 (statement_item -> statement .)
    NEWLINE         reduce using rule 69 (statement_item -> statement .)
    CONTINUE        reduce using rule 69 (statement_item -> statement .)
    LABEL           reduce using rule 69 (statement_item -> statement .)
    RETURN          reduce using rule 69 (statement_item -> statement .)
    STOP            reduce using rule 69 (statement_item -> statement .)
    PRINT           reduce using rule 69 (statement_item -> statement .)
    READ            reduce using rule 69 (statement_item -> statement .)
    GOTO            reduce using rule 69 (statement_item -> statement .)
    CALL            reduce using rule 69 (statement_item -> statement .)
    IF              reduce using rule 69 (statement_item -> statement .)
    DO              reduce using rule 69 (statement_item -> statement .)
    INTEGER_TYPE    reduce using rule 69 (statement_item -> statement .)
    REAL_TYPE       reduce using rule 69 (statement_item -> statement .)
    LOGICAL_TYPE    reduce using rule 69 (statement_item -> statement .)
    CHARACTER_TYPE  reduce using rule 69 (statement_item -> statement .)
    ID              reduce using rule 69 (statement_item -> statement .)
    ELSE            reduce using rule 69 (statement_item -> statement .)
    ENDIF           reduce using rule 69 (statement_item -> statement .)


state 36

    (72) statement -> opt_label . declaration terminator
    (73) statement -> opt_label . assignment terminator
    (74) statement -> opt_label . print_statement terminator
    (75) statement -> opt_label . read_statement terminator
    (76) statement -> opt_label . goto_statement terminator
    (77) statement -> opt_label . call_statement terminator
    (78) statement -> opt_label . RETURN terminator
    (79) statement -> opt_label . STOP terminator
    (85) statement -> opt_label . if_statement
    (87) statement -> opt_label . do_statement
    (15) declaration -> . type_spec variable_spec_list
    (1) assignment -> . reference = expression
    (8) print_statement -> . PRINT * , print_items_opt
    (33) read_statement -> . READ * , reference_list
    (48) goto_statement -> . GOTO label_number
    (60) call_statement -> . CALL ID call_arguments_opt
    (7) if_statement -> . IF ( expression ) THEN terminator statement_items else_part ENDIF terminator
    (10) do_statement -> . DO label_number ID = expression , expression do_step_opt terminator statement_items do_end
    (2) type_spec -> . INTEGER_TYPE
    (3) type_spec -> . REAL_TYPE
    (4) type_spec -> . LOGICAL_TYPE
    (5) type_spec -> . CHARACTER_TYPE
    (81) reference -> . ID
    (82) reference -> . ID ( expression_list_opt )

    RETURN          shift and go to state 50
    STOP            shift and go to state 51
    PRINT           shift and go to state 56
    READ            shift and go to state 57
    GOTO            shift and go to state 58
    CALL            shift and go to state 59
    IF              shift and go to state 61
    DO              shift and go to state 62
    INTEGER_TYPE    shift and go to state 18
    REAL_TYPE       shift and go to state 19
    LOGICAL_TYPE    shift and go to state 20
    CHARACTER_TYPE  shift and go to state 21
    ID              shift and go to state 60

    declaration                    shift and go to state 44
    assignment                     shift and go to state 45
    print_statement                shift and go to state 46
    read_statement                 shift and go to state 47
    goto_statement                 shift and go to state 48
    call_statement                 shift and go to state 49
    if_statement                   shift and go to state 52
    do_statement                   shift and go to state 53
    type_spec                      shift and go to state 54
    reference                      shift and go to state 55

state 37

    (83) statement -> CONTINUE . terminator
    (94) terminator -> . NEWLINE

    NEWLINE         shift and go to state 23

    terminator                     shift and go to state 63

state 38

    (90) opt_label -> LABEL .

    RETURN          reduce using rule 90 (opt_label -> LABEL .)
    STOP            reduce using rule 90 (opt_label -> LABEL .)
    PRINT           reduce using rule 90 (opt_label -> LABEL .)
    READ            reduce using rule 90 (opt_label -> LABEL .)
    GOTO            reduce using rule 90 (opt_label -> LABEL .)
    CALL            reduce using rule 90 (opt_label -> LABEL .)
    IF              reduce using rule 90 (opt_label -> LABEL .)
    DO              reduce using rule 90 (opt_label -> LABEL .)
    INTEGER_TYPE    reduce using rule 90 (opt_label -> LABEL .)
    REAL_TYPE       reduce using rule 90 (opt_label -> LABEL .)
    LOGICAL_TYPE    reduce using rule 90 (opt_label -> LABEL .)
    CHARACTER_TYPE  reduce using rule 90 (opt_label -> LABEL .)
    ID              reduce using rule 90 (opt_label -> LABEL .)


state 39

    (91) opt_label -> empty .

    RETURN          reduce using rule 91 (opt_label -> empty .)
    STOP            reduce using rule 91 (opt_label -> empty .)
    PRINT           reduce using rule 91 (opt_label -> empty .)
    READ            reduce using rule 91 (opt_label -> empty .)
    GOTO            reduce using rule 91 (opt_label -> empty .)
    CALL            reduce using rule 91 (opt_label -> empty .)
    IF              reduce using rule 91 (opt_label -> empty .)
    DO              reduce using rule 91 (opt_label -> empty .)
    INTEGER_TYPE    reduce using rule 91 (opt_label -> empty .)
    REAL_TYPE       reduce using rule 91 (opt_label -> empty .)
    LOGICAL_TYPE    reduce using rule 91 (opt_label -> empty .)
    CHARACTER_TYPE  reduce using rule 91 (opt_label -> empty .)
    ID              reduce using rule 91 (opt_label -> empty .)


state 40

    (6) function_unit -> function_prefix FUNCTION ID parameter_name_list_opt . terminator statement_items END
    (94) terminator -> . NEWLINE

    NEWLINE         shift and go to state 23

    terminator                     shift and go to state 64

state 41

    (36) subroutine_unit -> SUBROUTINE ID parameter_name_list_opt terminator . statement_items END
    (61) statement_items -> . statement_items statement_item
    (65) statement_items -> . empty
    (50) empty -> .

    END             reduce using rule 50 (empty -> .)
    NEWLINE         reduce using rule 50 (empty -> .)
    CONTINUE        reduce using rule 50 (empty -> .)
    LABEL           reduce using rule 50 (empty -> .)
    RETURN          reduce using rule 50 (empty -> .)
    STOP            reduce using rule 50 (empty -> .)
    PRINT           reduce using rule 50 (empty -> .)
    READ            reduce using rule 50 (empty -> .)
    GOTO            reduce using rule 50 (empty -> .)
    CALL            reduce using rule 50 (empty -> .)
    IF              reduce using rule 50 (empty -> .)
    DO              reduce using rule 50 (empty -> .)
    INTEGER_TYPE    reduce using rule 50 (empty -> .)
    REAL_TYPE       reduce using rule 50 (empty -> .)
    LOGICAL_TYPE    reduce using rule 50 (empty -> .)
    CHARACTER_TYPE  reduce using rule 50 (empty -> .)
    ID              reduce using rule 50 (empty -> .)

    statement_items                shift and go to state 65
    empty                          shift and go to state 27

state 42

    (44) parameter_name_list_opt -> ( parameter_name_list . )
    (57) parameter_name_list -> parameter_name_list . , ID

    )               shift and go to state 66
    ,               shift and go to state 67


state 43

    (54) parameter_name_list -> ID .

    )               reduce using rule 54 (parameter_name_list -> ID .)
    ,               reduce using rule 54 (parameter_name_list -> ID .)


state 44

    (72) statement -> opt_label declaration . terminator
    (94) terminator -> . NEWLINE

    NEWLINE         shift and go to state 23

    terminator                     shift and go to state 68

state 45

    (73) statement -> opt_label assignment . terminator
    (94) terminator -> . NEWLINE

    NEWLINE         shift and go to state 23

    terminator                     shift and go to state 69

state 46
